# LowFlow_MiniApp

./: .gitignore  CMakeLists.txt  Readme.md
cmake/: build_variant.txt  utilities.txt
src/: CMakeLists.txt  configure.cpp  configure.hpp  global_configure.cpp  global_configure.hpp  global_macros.hpp  global_types.cpp  global_types.hpp  macros.hpp  main.cpp  metrics.cpp  metrics.hpp  science.hpp  setup_teardown.hpp  types.hpp  util.hpp
src/simple_whole_cpu_loop_chain/: CMakeLists.txt  variant_configure.cpp  variant_metrics.cpp  variant_metrics.hpp  variant_science.cpp  variant_science.in.cpp  variant_types.hpp
src/simple_whole_cpu_parallel_omp/: CMakeLists.txt  variant_configure.cpp  variant_configure.hpp  variant_macros.hpp  variant_metrics.cpp  variant_metrics.hpp  variant_science.cpp  variant_types.cpp
src/simple_whole_cpu_parallel_omp_manual_fuse/: CMakeLists.txt  variant_metrics.hpp  variant_science.cpp
src/simple_whole_cuda/: CMakeLists.txt  variant_macros.hpp  variant_metrics.cpp  variant_metrics.hpp  variant_science.cpp  variant_types.cpp
src/simple_whole_cuda_lambda/: CMakeLists.txt  variant_macros.hpp  variant_metrics.cpp  variant_metrics.hpp  variant_science.cpp  variant_types.cpp
src/simple_whole_cuda_manual_memory/: CMakeLists.txt  variant_metrics.cpp  variant_metrics.hpp  variant_science.cpp  variant_types.cpp
src/simple_whole_cuda_manual_memory_async/: CMakeLists.txt  variant_configure.cpp  variant_configure.hpp  variant_metrics.cpp  variant_metrics.hpp  variant_science.cpp  variant_types.cpp
src/simple_whole_cuda_manual_memory_async_extracted/: CMakeLists.txt  variant_macros.hpp  variant_metrics.cpp  variant_metrics.hpp  variant_science.cpp  variant_types.cpp
src/simple_whole_cuda_manual_memory_async_split/: CMakeLists.txt  variant_configure.cpp  variant_configure.hpp  variant_science.cpp
src/simple_whole_cuda_manual_memory_extracted/: CMakeLists.txt  variant_science.cpp
src/simple_whole_cuda_manual_memory_pinned/: CMakeLists.txt  variant_metrics.cpp  variant_metrics.hpp  variant_science.cpp  variant_types.hpp
src/simple_whole_cuda_single_kernel/: CMakeLists.txt  variant_metrics.cpp  variant_metrics.hpp  variant_science.cpp  variant_setup_teardown.cpp
src/simple_whole_kokkos/: CMakeLists.txt  variant_configure.hpp  variant_macros.hpp  variant_metrics.cpp  variant_metrics.hpp  variant_science.cpp  variant_setup_teardown.cpp  variant_types.cpp  variant_types.hpp
src/simple_whole_serial/: CMakeLists.txt  variant_configure.cpp  variant_configure.hpp  variant_science.cpp  variant_types.cpp  variant_types.hpp
src/simple_whole_serial_agi/: CMakeLists.txt
src/simple_whole_serial_agi_access_using_domain/: CMakeLists.txt  variant_macros.hpp  variant_metrics.cpp  variant_metrics.hpp  variant_science.cpp  variant_types.hpp
src/simple_whole_serial_manual_fuse/: CMakeLists.txt  variant_macros.hpp  variant_metrics.cpp  variant_metrics.hpp
src/whole_gpu_parallel_opencl_manual/: CMakeLists.txt  variant_macros.hpp  variant_science.cpp  variant_types.cpp
src/whole_gpu_parallel_opencl_manual_fuse_store_temporary/: CMakeLists.txt  variant_configure.cpp  variant_metrics.cpp  variant_metrics.hpp  variant_science.cpp
src/whole_gpu_parallel_opencl_manual_recompute/: CMakeLists.txt  variant_types.hpp
src/whole_gpu_parallel_opencl_manual_store_temporary/: CMakeLists.txt  variant_configure.cpp  variant_configure.hpp  variant_macros.hpp  variant_metrics.cpp  variant_metrics.hpp  variant_science.cpp
src/whole_gpu_parallel_opencl_manual_three_phase/: CMakeLists.txt
